--- a/public/css/default.css
+++ b/public/css/default.css
@@ -40,6 +40,7 @@ body { padding: 0; margin: 0; background-color: #E0E0E0; font-family: Arial; }
 .components .name em { font-weight: normal; font-size: 11px; color: #777; margin-left: 5px; }
 .components .caption { padding: 12px 10px 5px; font-size: 12px; color: #999; }
 .components .caption:first-child { padding-top: 0; }
+.components .external { color: #2D6465; }
 
 .ui-dark .components figure { background-color: #333; }
 .ui-dark .components figure:hover { border-color: #404040; }
