--- a/views/index.html
+++ b/views/index.html
@@ -151,6 +151,7 @@
 		DEF.language = '';
 
 		UIBuilder.editor = true;
+		UIBuilder.origin = location.origin;
 
 		common.windows = [];
 		common.components = [];
