--- a/views/index.html
+++ b/views/index.html
@@ -719,6 +719,7 @@
 			data.type = schema.type;
 			data.group = schema.group;
 			data.version = schema.version;
+			data.reference = schema.reference;
 			data.args = schema.args;
 			data.editor = schema.editor ? CLONE(schema.editor) : {};
 			data.description = schema.description;
